--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta
       name="image"
       property="og:image"
-      content="https://user-images.githubusercontent.com/27709832/146458631-486a07cc-c415-4102-b50c-f4805cd873f6.png"
+      content="https://user-images.githubusercontent.com/77038610/146545208-f705f66f-06c6-4d5f-897f-d1e49ed65975.jpg"
     />
     <meta
       name="description"
