--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <meta
       name="description"
       property="og:description"
-      content="This project is used to display a list of books. Users can add/remove books from the list. It is built with ReactJS and Redux. It implements Routing, and function-based Components concepts."
+      content="A Single Page App (SPA) that allows users to make simple calculations. and read a random math-related quote"
     />
     <meta
       name="description"
