--- a/public/index.html
+++ b/public/index.html
@@ -4,20 +4,20 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+
     <meta
-      name="image"
       property="og:image"
       content="https://user-images.githubusercontent.com/77038610/146545208-f705f66f-06c6-4d5f-897f-d1e49ed65975.jpg"
     />
     <meta
-      name="description"
       property="og:description"
       content="A Single Page App (SPA) that allows users to make simple calculations. and read a random math-related quote"
     />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+    property="og:title" 
+      content="React Calculator"
     />
+    
     <title>React App</title>
   </head>
   <body>
